versioned_docs/version-0.8.0/tools/cli/package-management/command-reference/6.login.md
# kcl registry login

Login to the kcl registry.

## Usage

```shell
kcl registry login [options][kpm_registry]
```

## Description

`kcl registry login` will login the kcl registry.

## options

### --username

Specify the username of the kcl registry.

### --password

Specify the password of the kcl registry.

### --help, -h

Show help for `kcl registry login` command.

## Examples

### login to a registry with account and password

```shell
kcl registry login -u <account_name> -p <password> <oci_registry>
```

The output is

```shell
Login succeeded
```

### login to a registry with account, and enter the password interactively

```shell
kcl registry login -u <account_name> <oci_registry>
```

The output is

```shell
Password:
Login succeeded
```

### login to a registry, and enter the account and password interactively

```shell
kcl registry login <oci_registry>
```

The output is

```shell
Username: <account_name>
Password:
Login succeeded
```
