versioned_docs/version-0.10/tools/cli/package-management/command-reference/6.login.md
# kcl registry login

Login to the kcl registry.

## Usage

```shell
kcl registry login [options][kpm_registry]
```

## Description

`kcl registry login` will login the kcl registry.

## options

### --username

Specify the username of the kcl registry.

### --password

Specify the password of the kcl registry.

### --help, -h

Show help for `kcl registry login` command.

## Examples

### login to a registry with account and password

```shell
kcl registry login -u <account_name> -p <password> <oci_registry>
```

The output is

```shell
Login succeeded
```

### login to a registry with account, and enter the password interactively

```shell
kcl registry login -u <account_name> <oci_registry>
```

The output is

```shell
Password:
Login succeeded
```

### login to a registry, and enter the account and password interactively

```shell
kcl registry login <oci_registry>
```

The output is

```shell
Username: <account_name>
Password:
Login succeeded
```

## Reference

```shell
This command can be used to login to a registry.

Usage:
  kcl registry login [flags]

Examples:
  # Login the docker hub
  kcl registry login docker.io

  # Login the GitHub container registry
  kcl registry login ghcr.io

  # Login a localhost registry
  kcl registry login https://localhost:5001


Flags:
  -h, --help              help for login
  -p, --password string   registry password or identity token
  -u, --username string   registry username

Global Flags:
  -q, --quiet   Set the quiet mode (no output)
```
